# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: my_workflow.yml
page_analyzer/: app.py  url_check_repository.py  url_repository.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: index.html  show.html
